--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,32 @@
+#clear_marks_btn {
+    position: fixed;
+    bottom: 14px;
+    right: 20px;
+    background-color: rgba(0,0,0, 0.4);
+    color: #fff;
+    text-align: center;
+    padding: 10px 12px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+#clear_marks_btn:hover, #del_mark_btn:hover {
+    background-color: rgba(0,0,0, 0.6);
+    text-decoration: underline;
+}
+#del_mark_btn {
+    position: fixed;
+    display: none;
+    width: 2em;
+    top: 100px;
+    left: 100px;
+    padding: 4px 6px;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: #fff;
+    font-size: 12px;
+    border-radius: 10px;
+}
+
 .tips {
     position: fixed;
     top: 0;
